--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,16 @@
 <resources>
-    <string name="app_name">hackMIT</string>
+    <string name="app_name">HackMITProject</string>
 
-    <string name="warning">If this is a medical emergency, make sure to call MIT Police. This app is not a replacement for professional emergency response systems.</string>
     <string name="action_settings">Settings</string>
-    <string name="button_CPR">CPR Emergency</string>
-    <string name="button_EMT">Non-CPR Medical Emergency</string>
-    <string name="button_MedLink">Non Urgent Medical Assistance</string>
+    <string name="chief_complaint">Chief Complaint: (e.g. difficulty breathing, broken leg)</string>
+    <string name="chief_complaint_prompt">Enter chief complaint here</string>
+    <string name="location">Location: (e.g. floor, room number)</string>
+    <string name="location_prompt">Enter location here</string>
+    <string name="additional_info">Additional info:</string>
+    <string name="additional_info_prompt">Add more details here</string>
+    <string name="title_activity_wait_page">Request Handling</string>
+    <string name="wait_message">Processing Request. Waiting to be claimed...</string>
+    <string name="title_activity_accept_request">AcceptRequest</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
